# phm-bearing-fault-classification

./: .gitignore  readme.md  runFaultNet.bat
doc/: FaultNet.pptx
src/FaultNet/: feature.py  main.py  model.py  preprocessing.py  readme.md  requirements.txt  runFaultNet.bat  runPreprocessing.bat
src/SignalNet/: dataset.py  eval.py  main.py  model.py  preprocessing_1.py  preprocessing_2.py  readme.md  runEvalSignalNet.bat  runPreprocessing.bat  runTrainSignalNet.bat
src/SignalNetCpp/: CMakeLists.txt  config.ini  dataset.h  main.cpp  model.h  readme.md  utils.h
src/SignalNetCpp/include/: dataset.h  model.h  utils.h
src/SignalNetCpp/src/: main.cpp
